Fix overflow

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -5,7 +5,6 @@ html, body
   background-color: #fff
   height: 100%
   margin: 0
-  overflow: hidden
   padding: 0
   width: 100%
 
